force-app/main/default/objects/TwitchApp__c/TwitchApp__c.object-meta.xml
<CustomObject>
    <description>Represent the application created via the Twtich Developer Console</description>
    <label>Twitch App</label>
    <nameField>
        <label>Twitch App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twitch Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>