force-app/main/default/objects/TwitchApp__c/fields/AccessToken__c.field-meta.xml
<CustomField>
    <fullName>AccessToken__c</fullName>
    <label>Access Token</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>