force-app/main/default/objects/TwitchApp__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <label>Client ID</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>