force-app/main/default/objects/TwitchApp__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the app is the org default</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>