force-app/main/default/objects/TwitchApp__c/fields/TokenExpiration__c.field-meta.xml
<CustomField>
    <fullName>TokenExpiration__c</fullName>
    <label>Token Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>